<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.RegisterMonthActivity">


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_red_300"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <com.umut.soysal.lib.CurrencyEditText
                    android:id="@+id/currencyEn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/float_transparent"
                    android:padding="30dp"
                    android:textColor="@color/md_white_1000"
                    android:textSize="40sp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mTi_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/md_red_A700">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/data"
                        android:inputType="date" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputCategories"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/md_red_A700">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_categories"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/categoria"
                        android:padding="15dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/md_black_1000" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mTi_description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/md_red_A700">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/descricao"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--ID of any Caterogy-->
                <TextView
                    android:id="@+id/idCAT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save_details"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="@string/guardar"
                    android:textAllCaps="false"
                    android:textColor="@color/md_white_1000"
                    app:icon="@drawable/ic_add" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_update_details"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="@string/alterar"
                    android:textAllCaps="false"
                    android:textColor="@color/md_white_1000"
                    android:visibility="gone"
                    app:icon="@drawable/ic_sync" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>