<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lancamentos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.LancamentosActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mToolbar_lancamentos"
        style="@style/AppTheme.NoBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white">

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mToolbar_lancamentos"
        android:layout_marginTop="0dp"
        android:background="@color/md_white_1000">

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bootom"
        android:layout_below="@+id/tabs"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/white" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/semi_transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bootom"
        android:layout_alignTop="@+id/mToolbar_lancamentos"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        app:fab_labelsPosition="left"
        fab:fab_addButtonColorNormal="@color/red_btn_bg_color"
        fab:fab_addButtonColorPressed="@color/white"
        fab:fab_addButtonPlusIconColor="@color/gray"
        fab:fab_labelStyle="@style/menu_labels_style"
        fab:fab_plusIconColor="@color/md_black_1000">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_receitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_add"
            app:fab_size="mini"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="@color/material_drawer_hint_text"
            fab:fab_plusIconColor="@color/white"
            fab:fab_title="@string/receita" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_despesas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_add"
            app:fab_size="mini"
            fab:fab_colorNormal="@color/md_red_300"
            fab:fab_colorPressed="@color/material_drawer_hint_text"
            fab:fab_plusIconColor="@color/white"
            fab:fab_title="@string/despesa" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

    <LinearLayout
        android:id="@+id/ll_bootom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/gray"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/material_drawer_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/saldo_no_mes"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mT_money_lancamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text=""
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>